--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
     .section ul li {
       margin-bottom: 0.5rem;
     }
+    footer {
+      text-align: center;
+      margin-top: 4rem;
+      font-size: 1rem;
+    }
+    footer a {
+      color: #b3003b;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -68,7 +77,7 @@
     <header>
       <h1>Tracking State Anxiety Across the Menstrual Cycle in Naturally Cycling Women</h1>
       <p>This research aims to explore how general anxiety levels vary throughout the phases of the menstrual cycle in women who are naturally cycling, without using hormonal contraceptives.</p>
-      <a href="#participate" class="button">Participate Now</a>
+      <a href="#contact" class="button">Participate Now</a>
     </header>
 
     <div class="sections">
@@ -97,6 +106,10 @@
         </ul>
       </div>
     </div>
+
+    <footer id="contact">
+      <p>Contact: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a></p>
+    </footer>
   </div>
 </body>
 </html>
