--- a/index.html
+++ b/index.html
@@ -68,47 +68,104 @@
     }
     footer a {
       color: #b3003b;
-      text-decoration: none;
+      text-decoration: underline;
     }
+    .custom-line {
+      border: none;
+      height: 1px;
+      background-color: #b3003b;
+      max-width: 100%;
+      margin-top: 2rem;
+    }
+
+
   </style>
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Tracking State Anxiety Across the Menstrual Cycle in Naturally Cycling Women</h1>
-      <p>This research aims to explore how general anxiety levels vary throughout the phases of the menstrual cycle in women who are naturally cycling, without using hormonal contraceptives.</p>
+      <h1>Beyond the Mood Swings</h1>
+      <br>
+      <p>This research aims to explore if (and how) general anxiety levels vary throughout the phases of the menstrual cycle in women who are naturally cycling, without using hormonal birth control. Additionally, the study investigates potential changes in social understanding between the follicular and luteal phases by using Theory of Mind tasks.</p>
+      <br>
+      <br>
       <a href="#contact" class="button">Participate Now</a>
+      <br>
+      <hr class="custom-line">
     </header>
+
+
+    <div class="section">
+      <h2>About Me</h2>
+      <p>Hi, thank you so much for taking the time to learn more about my Master's thesis! My name is Nikki Rademaker. I am a 24-year-old Master's student in the Media Technology MSc program at Leiden University. I'm especially interested in topics that are often overlooked, like women's health. With this project, I hope to contribute to research that is more inclusive of the female experience. I also hope it helps participants and others gain more awareness of how their anxiety may change throughout the menstrual cycle to better understand, recognize, and manage those possible fluctuations in daily life.</p>
+    </div>
 
     <div class="sections">
       <div class="section">
         <h2>Overview</h2>
-        <p>Conducting a longitudinal study tracking state anxiety levels across two menstrual cycles in women who are naturally cycling, without using hormonal contraceptives.</p>
+        <p>We are conducting a longitudinal study that tracks daily anxiety levels across two menstrual cycles in naturally cycling women. Additionally, participants will complete Theory of Mind tasks during specific cycle phases to explore links between hormonal shifts, anxiety, and social cognition.</p>
       </div>
 
       <div class="section">
         <h2>Eligibility</h2>
+        <p>To be able to participate, you need to meet the following criteria:</p>
         <ul>
           <li>Female</li>
           <li>Age 18+</li>
           <li>Natural menstrual cycle</li>
-          <li>Not using hormonal birth control</li>
-          <li>No hormonal birth control in last 2 months</li>
+          <li>Have not used hormonal birth control in the past 2 months.</li>
+          <li>Are not planning to use hormonal birth control in the next 3 months.</li>
+          <li>English speaking</li>
         </ul>
       </div>
 
       <div class="section">
-        <h2>Methodology</h2>
+        <h2>What You'll Do</h2>
         <ul>
-          <li>Data collection over two full cycles</li>
-          <li>Daily anxiety surveys</li>
-          <li>Theory of Mind tests during follicular and luteal phases</li>
+          <li>Complete a short anxiety survey (2-5 min) every day for ~2 cycles</li>
+          <li>Report menstruation dates and relevant symptoms</li>
+          <li>Optional: Take 4 short Theory of Mind tests (15-25 min each)</li>
+          <li>Share relevant diagnoses or medications affecting anxiety</li>
         </ul>
       </div>
     </div>
 
+    <div class="sections">
+      <div class="section">
+        <h2>Why Participate?</h2>
+        <ul>
+          <li>Contribute to research that fills a critical gap in women's health</li>
+          <li>Receive personalized insights about your anxiety patterns</li>
+          <li>Help us better understand how hormones affect social reasoning</li>
+        </ul>
+      </div>
+
+      <div class="section">
+        <h2>Your Data Will Be...</h2>
+        <ul>
+          <li>Securely stored within Qualtrics.</li>
+          <li>Anonymized before analysis. A unique ID will be assigned to each participant to track entries securely.</li>
+          <li>Used solely for research purposes, and no identifiable information will be shared outside the research team.</li>
+        </ul>
+      </div>
+
+      <div class="section">
+        <h2>Optional Benefits</h2>
+        <ul>
+          <li>Receive updates about the study's progress</li>
+          <li>Access a summary of findings if interested</li>
+          <li>Help shape future studies on female mental health</li>
+        </ul>
+      </div>
+    </div>
+
+    
+
     <footer id="contact">
-      <p>Contact: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a></p>
+      <hr class="custom-line">
+      <p>To participate send me an email. Also, email me any questions you have before deciding to participate! </p>
+      <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a></p>
+      <p>LinkedIn: <a href="linkedin.com/in/nikki-s-rademaker">nikki-s-rademaker</a></p>
     </footer>
   </div>
 </body>
