--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
       font-size: 1.5rem;
       margin-bottom: 1rem;
     }
-    .section ul {
+    /* .section ul {
       list-style: none;
       padding: 0;
+    } */
+    .section ul {
+      list-style: disc;
+      padding-left: 1.5rem;
     }
     .section ul li {
       margin-bottom: 0.5rem;
@@ -102,13 +106,12 @@
 
     <div class="sections">
       <div class="section">
-        <h2>Overview</h2>
+        <h2>Project Overview</h2>
         <p>We are conducting a longitudinal study that tracks daily anxiety levels across two menstrual cycles in naturally cycling women. Additionally, participants will complete Theory of Mind tasks during specific cycle phases to explore links between hormonal shifts, anxiety, and social cognition.</p>
       </div>
 
       <div class="section">
-        <h2>Eligibility</h2>
-        <p>To be able to participate, you need to meet the following criteria:</p>
+        <h2>Participation criteria</h2>
         <ul>
           <li>Female</li>
           <li>Age 18+</li>
@@ -150,12 +153,7 @@
       </div>
 
       <div class="section">
-        <h2>Optional Benefits</h2>
-        <ul>
-          <li>Receive updates about the study's progress</li>
-          <li>Access a summary of findings if interested</li>
-          <li>Help shape future studies on female mental health</li>
-        </ul>
+        <h2>idkkkkkk</h2>
       </div>
     </div>
 
@@ -164,8 +162,10 @@
     <footer id="contact">
       <hr class="custom-line">
       <p>To participate send me an email. Also, email me any questions you have before deciding to participate! </p>
-      <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a></p>
-      <p>LinkedIn: <a href="linkedin.com/in/nikki-s-rademaker">nikki-s-rademaker</a></p>
+      <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a>
+            <br>
+         LinkedIn: <a href="linkedin.com/in/nikki-s-rademaker">nikki-s-rademaker</a>
+      </p>
     </footer>
   </div>
 </body>
