--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
         <h2>Participation criteria</h2>
         <ul>
           <li>Female</li>
-          <li>Age 18+</li>
+          <li>Age 18 or older</li>
           <li>Natural menstrual cycle</li>
-          <li>Have not used hormonal birth control in the past 2 months.</li>
-          <li>Are not planning to use hormonal birth control in the next 3 months.</li>
+          <li>Have not used hormonal birth control in the past 2 months</li>
+          <li>Are not planning to use hormonal birth control in the next 3 months</li>
           <li>English speaking</li>
         </ul>
       </div>
@@ -125,10 +125,10 @@
       <div class="section">
         <h2>What You'll Do</h2>
         <ul>
-          <li>Complete a short anxiety survey (2-5 min) every day for ~2 cycles</li>
-          <li>Report menstruation dates and relevant symptoms</li>
-          <li>Optional: Take 4 short Theory of Mind tests (15-25 min each)</li>
-          <li>Share relevant diagnoses or medications affecting anxiety</li>
+          <li>Complete a short anxiety survey (2-5 min) every day for 2 full menstrual cycles.</li>
+          <li>Report menstruation dates and relevant symptoms.</li>
+          <li>Take 4 short Theory of Mind tests (15-25 min each) in total. This will be done on days 7-10 and 21-24 of the menstrual cycle for two cycles.</li>
+          <li>Share if you have a relevant diagnoses or are taking medications affecting anxiety. You don't have to mention which diagnosis or medication.</li>
         </ul>
       </div>
     </div>
