--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,23 +13,28 @@
       margin: 0;
       padding: 0;
     }
+
     .container {
       max-width: 900px;
       margin: auto;
       padding: 2rem;
     }
+
     header {
       text-align: center;
       padding: 2rem 1rem;
     }
+
     header h1 {
       font-size: 2.5rem;
       margin-bottom: 1rem;
     }
+
     header p {
       font-size: 1.2rem;
       margin-bottom: 2rem;
     }
+
     .button {
       background-color: #b3003b;
       color: white;
@@ -39,21 +45,25 @@
       border-radius: 5px;
       text-decoration: none;
     }
+
     .sections {
       display: flex;
       justify-content: space-between;
       margin-top: 3rem;
       flex-wrap: wrap;
     }
+
     .section {
       flex: 1;
       margin: 1rem;
       min-width: 250px;
     }
+
     .section h2 {
       font-size: 1.5rem;
       margin-bottom: 1rem;
     }
+
     /* .section ul {
       list-style: none;
       padding: 0;
@@ -62,18 +72,22 @@
       list-style: disc;
       padding-left: 1.5rem;
     }
+
     .section ul li {
       margin-bottom: 0.5rem;
     }
+
     footer {
       text-align: center;
       margin-top: 4rem;
       font-size: 1rem;
     }
+
     footer a {
       color: #b3003b;
       text-decoration: underline;
     }
+
     .custom-line {
       border: none;
       height: 1px;
@@ -81,16 +95,18 @@
       max-width: 100%;
       margin-top: 2rem;
     }
-
-
   </style>
 </head>
+
 <body>
   <div class="container">
     <header>
       <h1>Beyond the Mood Swings</h1>
       <br>
-      <p>This research aims to explore if (and how) general anxiety levels vary throughout the phases of the menstrual cycle in women who are naturally cycling, without using hormonal birth control. Additionally, the study investigates potential changes in social understanding between the follicular and luteal phases by using Theory of Mind tasks.</p>
+      <p>This research aims to explore if (and how) general anxiety levels vary throughout the phases of the menstrual
+        cycle in women who are naturally cycling, without using hormonal birth control. Additionally, the study
+        investigates potential changes in social understanding between the follicular and luteal phases by using Theory
+        of Mind tasks.</p>
       <br>
       <br>
       <a href="#contact" class="button">Participate Now</a>
@@ -101,13 +117,20 @@
 
     <div class="section">
       <h2>About Me</h2>
-      <p>Hi, thank you so much for taking the time to learn more about my Master's thesis! My name is Nikki Rademaker. I am a 24-year-old Master's student in the Media Technology MSc program at Leiden University. I'm especially interested in topics that are often overlooked, like women's health. With this project, I hope to contribute to research that is more inclusive of the female experience. I also hope it helps participants and others gain more awareness of how their anxiety may change throughout the menstrual cycle to better understand, recognize, and manage those possible fluctuations in daily life.</p>
+      <p>Hi, thank you so much for taking the time to learn more about my Master's thesis! My name is Nikki Rademaker. I
+        am a 24-year-old Master's student in the Media Technology MSc program at Leiden University. I'm especially
+        interested in topics that are often overlooked, like women's health. With this project, I hope to contribute to
+        research that is more inclusive of the female experience. I also hope it helps participants and others gain more
+        awareness of how their anxiety may change throughout the menstrual cycle to better understand, recognize, and
+        manage those possible fluctuations in daily life.</p>
     </div>
 
     <div class="sections">
       <div class="section">
         <h2>Project Overview</h2>
-        <p>We are conducting a longitudinal study that tracks daily anxiety levels across two menstrual cycles in naturally cycling women. Additionally, participants will complete Theory of Mind tasks during specific cycle phases to explore links between hormonal shifts, anxiety, and social cognition.</p>
+        <p>We are conducting a longitudinal study that tracks daily anxiety levels across two menstrual cycles in
+          naturally cycling women. Additionally, participants will complete Theory of Mind tasks during specific cycle
+          phases to explore links between hormonal shifts, anxiety, and social cognition.</p>
       </div>
 
       <div class="section">
@@ -122,18 +145,7 @@
         </ul>
       </div>
 
-      <div class="section">
-        <h2>What You'll Do</h2>
-        <ul>
-          <li>Complete a short anxiety survey (2-5 min) every day for 2 full menstrual cycles.</li>
-          <li>Report menstruation dates and relevant symptoms.</li>
-          <li>Take 4 short Theory of Mind tests (15-25 min each) in total. This will be done on days 7-10 and 21-24 of the menstrual cycle for two cycles.</li>
-          <li>Share if you have a relevant diagnoses or are taking medications affecting anxiety. You don't have to mention which diagnosis or medication.</li>
-        </ul>
-      </div>
-    </div>
 
-    <div class="sections">
       <div class="section">
         <h2>Why Participate?</h2>
         <ul>
@@ -143,30 +155,45 @@
         </ul>
       </div>
 
+    </div>
+
+    <div class="sections">
       <div class="section">
-        <h2>Your Data Will Be...</h2>
+        <h2>What You'll Do</h2>
         <ul>
-          <li>Securely stored within Qualtrics.</li>
-          <li>Anonymized before analysis. A unique ID will be assigned to each participant to track entries securely.</li>
-          <li>Used solely for research purposes, and no identifiable information will be shared outside the research team.</li>
+          <li>Complete a short anxiety survey (2-5 min) every day for 2 full menstrual cycles.</li>
+          <li>Report menstruation dates and relevant symptoms.</li>
+          <li>Take 4 short Theory of Mind tests (15-25 min each) in total. This will be done on days 7-10 and 21-24 of
+            the menstrual cycle for two cycles.</li>
+          <li>Share if you have a relevant diagnoses or are taking medications affecting anxiety. You don't have to
+            mention which diagnosis or medication.</li>
         </ul>
       </div>
 
       <div class="section">
-        <h2>idkkkkkk</h2>
+        <h2>Your Data Will Be...</h2>
+        <ul>
+          <li>Securely stored within Qualtrics.</li>
+          <li>Anonymized before analysis. A unique ID will be assigned to each participant to track entries securely.
+          </li>
+          <li>Used solely for research purposes, and no identifiable information will be shared outside the research
+            team.</li>
+        </ul>
       </div>
+
     </div>
 
-    
+
 
     <footer id="contact">
       <hr class="custom-line">
       <p>To participate send me an email. Also, email me any questions you have before deciding to participate! </p>
       <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a>
-            <br>
-         LinkedIn: <a href="linkedin.com/in/nikki-s-rademaker">nikki-s-rademaker</a>
+        <br>
+        LinkedIn: <a href="linkedin.com/in/nikki-s-rademaker">nikki-s-rademaker</a>
       </p>
     </footer>
   </div>
 </body>
+
 </html>
