--- a/index.html
+++ b/index.html
@@ -114,24 +114,36 @@
       <hr class="custom-line">
     </header>
 
-
     <div class="section">
       <h2>About Me</h2>
-      <p>Hi, thank you so much for taking the time to learn more about my Master's thesis! My name is Nikki Rademaker. I
-        am a 24-year-old Master's student in the Media Technology MSc program at Leiden University. I'm especially
-        interested in topics that are often overlooked, like women's health. With this project, I hope to contribute to
-        research that is more inclusive of the female experience. I also hope it helps participants and others gain more
-        awareness of how their anxiety may change throughout the menstrual cycle to better understand, recognize, and
-        manage those possible fluctuations in daily life.</p>
+      <p>Hi, thank you so much for taking the time to learn more about my Master's thesis! My name is Nikki Rademaker.
+        I am a 24-year-old Master's student in the Media Technology MSc program at Leiden University.
+        I am especially interested in topics that are often overlooked, like women's health.
+        With this project, I hope to contribute to research that is more inclusive of the female experience.
+        I also hope it helps participants and others gain more awareness of how their anxiety may change throughout the
+        menstrual cycle to better understand, recognize, and manage those possible fluctuations in daily life.
+        It would truly mean a lot to me if you choose to participate or share this study with someone who might be
+        interested. Your support helps make this research possible.</p>
     </div>
+    <br>
+
+    <div class="section">
+      <h2>Project Overview</h2>
+      <p>This graduation project explores how and if anxiety levels change during the different phases of the menstrual
+        cycle in women who are not using hormonal birth control.
+        Participants will fill in a short daily survey for two full cycles to report how anxious they felt each day.
+        The study also includes a simple task where participants read short stories and answer questions to see how well
+        they understand social situations.
+        This is done to find out if changes in anxiety may also affect affective Theory of Mind abilities, which involve
+        recognizing others' emotions and intentions.
+        The overall main goal of this study is to better understand if and when anxiety tends to increase across the
+        cycle, and how this might relate to hormonal changes.</p>
+    </div>
+    <br>
+    <hr class="custom-line">
+
 
     <div class="sections">
-      <div class="section">
-        <h2>Project Overview</h2>
-        <p>We are conducting a longitudinal study that tracks daily anxiety levels across two menstrual cycles in
-          naturally cycling women. Additionally, participants will complete Theory of Mind tasks during specific cycle
-          phases to explore links between hormonal shifts, anxiety, and social cognition.</p>
-      </div>
 
       <div class="section">
         <h2>Participation criteria</h2>
@@ -173,6 +185,7 @@
       <div class="section">
         <h2>Your Data Will Be...</h2>
         <ul>
+          <li>Collected through Qualtrics.</li>
           <li>Securely stored within Qualtrics.</li>
           <li>Anonymized before analysis. A unique ID will be assigned to each participant to track entries securely.
           </li>
@@ -180,17 +193,15 @@
             team.</li>
         </ul>
       </div>
-
     </div>
-
-
 
     <footer id="contact">
       <hr class="custom-line">
-      <p>To participate send me an email. Also, email me any questions you have before deciding to participate! </p>
+      <p>If you're interested in participating or have any questions, feel free to send me an email!</p>
       <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a>
         <br>
-        LinkedIn: <a href="linkedin.com/in/nikki-s-rademaker">nikki-s-rademaker</a>
+        LinkedIn: <a href="https://www.linkedin.com/in/nikki-s-rademaker/">nikki-s-rademaker</a>
+
       </p>
     </footer>
   </div>
