--- a/index.html
+++ b/index.html
@@ -148,32 +148,24 @@
       <div class="section">
         <h2>Participation criteria</h2>
         <ul>
-          <li>Female</li>
-          <li>Age 18 or older</li>
-          <li>Natural menstrual cycle</li>
-          <li>Have not used hormonal birth control in the past 2 months</li>
-          <li>Are not planning to use hormonal birth control in the next 3 months</li>
-          <li>English speaking</li>
+          <li>Female.</li>
+          <li>Age 18 or older.</li>
+          <li>Natural menstrual cycle.</li>
+          <li>Have not used hormonal birth control in the past 2 months.</li>
+          <li>Are not planning to use hormonal birth control in the next 3 months.</li>
+          <li>English speaking.</li>
         </ul>
       </div>
 
 
-      <div class="section">
-        <h2>Why Participate?</h2>
-        <ul>
-          <li>Contribute to research that fills a critical gap in women's health</li>
-          <li>Receive personalized insights about your anxiety patterns</li>
-          <li>Help us better understand how hormones affect social reasoning</li>
-        </ul>
-      </div>
 
-    </div>
 
-    <div class="sections">
       <div class="section">
         <h2>What You'll Do</h2>
         <ul>
-          <li>Complete a short anxiety survey (2-5 min) every day for 2 full menstrual cycles.</li>
+          <li>Complete a short anxiety survey (2-5 min) every day for 2 full menstrual cycles. This survey is called the
+            State Trait Anxiety Inventory. You will be given simple statements and asked to rate how well they describe
+            how you felt that day.</li>
           <li>Report menstruation dates and relevant symptoms.</li>
           <li>Take 4 short Theory of Mind tests (15-25 min each) in total. This will be done on days 7-10 and 21-24 of
             the menstrual cycle for two cycles.</li>
@@ -182,6 +174,9 @@
         </ul>
       </div>
 
+    </div>
+
+    <div class="sections">
       <div class="section">
         <h2>Your Data Will Be...</h2>
         <ul>
@@ -191,6 +186,15 @@
           </li>
           <li>Used solely for research purposes, and no identifiable information will be shared outside the research
             team.</li>
+        </ul>
+      </div>
+
+      <div class="section">
+        <h2>Why Participate?</h2>
+        <ul>
+          <li>Contribute to research on mental health and hormonal cycles.</li>
+          <li>Gain insights into your own anxiety patterns across the menstrual cycle.</li>
+          <li>Support an academic thesis focused on women's health.</li>
         </ul>
       </div>
     </div>
