--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
       margin-bottom: 0.5rem;
     }
 
+    .section ul ul {
+      list-style: none;
+      padding-left: 1.5rem;
+    }
+
+    .section ul ul li::before {
+      content: "– ";
+      margin-right: 0.3em;
+    }
+
     footer {
       text-align: center;
       margin-top: 4rem;
@@ -110,10 +120,9 @@
       <br>
       <br>
       <a href="#contact" class="button">Participate Now</a>
-      <br>
-      <hr class="custom-line">
     </header>
 
+    <hr class="custom-line">
     <div class="section">
       <h2>About Me</h2>
       <p>Hi, thank you so much for taking the time to learn more about my Master's thesis! My name is Nikki Rademaker.
@@ -126,6 +135,7 @@
         interested. Your support helps make this research possible.</p>
     </div>
     <br>
+    <hr class="custom-line">
 
     <div class="section">
       <h2>Project Overview</h2>
@@ -139,8 +149,6 @@
         The overall main goal of this study is to better understand if and when anxiety tends to increase across the
         cycle, and how this might relate to hormonal changes.</p>
     </div>
-    <br>
-    <hr class="custom-line">
 
 
     <div class="sections">
@@ -156,9 +164,6 @@
           <li>English speaking.</li>
         </ul>
       </div>
-
-
-
 
       <div class="section">
         <h2>What You'll Do</h2>
@@ -178,7 +183,7 @@
 
     <div class="sections">
       <div class="section">
-        <h2>Your Data Will Be...</h2>
+        <h2>Your Data Will Be....</h2>
         <ul>
           <li>Collected through Qualtrics.</li>
           <li>Securely stored within Qualtrics.</li>
@@ -197,10 +202,52 @@
           <li>Support an academic thesis focused on women's health.</li>
         </ul>
       </div>
+
     </div>
 
+    <br>
+    <hr class="custom-line">
+
+
+    <div class="section">
+      <h2>How to Sign Up and What to Expect?</h2>
+      <ul>
+        <li>Email me to let me know you would like to participate.</li>
+        <li>You will receive a link to the initial survey, which includes: <ul>
+            <li>An information sheet about the study and contact details (mine and my supervisor’s).</li>
+            <li>An informed consent form to confirm your agreement to participate.</li>
+          </ul>
+        </li>
+        <li> After signing the consent form, you will receive a short preliminary survey with 7 questions.
+          It collects general information on factors that might influence anxiety levels and asks when your previous
+          menstrual cycle started and ended.</li>
+        <li>Once that is completed, you will begin the main part of the study: <ul>
+            <li>For two full menstrual cycles, you will receive a short daily survey in the evening via email. </li>
+            <li>Each survey will be available for 48 hours to avoid collecting unreliable data.</li>
+            <li>You will receive reminder emails if the daily survey is not completed.</li>
+          </ul>
+        </li>
+        <li>On specific days of your cycle (around days 7-10 and 21-24), you will receive a second type of task. This
+          is a Theory of Mind test with very short stories and questions. These tasks will be available for 3 days, so
+          you
+          can complete them at a time that works for you within
+          that window.</li>
+      </ul>
+    </div>
+
+    <br>
+
+    <div class="section">
+      <h2>Withdrawing from the Study</h2>
+      <p>You may stop your participation in this study at any time, for any reason. If you decide to withdraw, your data
+        will no longer be used. You do not have to give a reason. If you have any concerns or would like to
+        withdraw your data, please contact me through email.</p>
+    </div>
+    <br>
+    <hr class="custom-line">
+
+
     <footer id="contact">
-      <hr class="custom-line">
       <p>If you're interested in participating or have any questions, feel free to send me an email!</p>
       <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a>
         <br>
