--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
     <div class="section">
       <h2>Project Overview</h2>
+      <img src="GirlPain.png" style="float:right; max-width:120px; margin:-20px 0 1rem 1rem; opacity:0.85;transform: scaleX(-1);" alt="Anxious girl illustration">
       <p>This graduation project explores how and if anxiety levels change during the different phases of the menstrual
         cycle in women who are not using hormonal birth control.
         Participants will fill in a short daily survey for two full cycles to report how anxious they felt each day.
