--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
 
     <div class="section">
       <h2>Project Overview</h2>
-      <img src="GirlPain.png" style="float:right; max-width:120px; margin:-20px 0 1rem 1rem; opacity:0.85;transform: scaleX(-1);" alt="Anxious girl illustration">
+      <img src="GirlPain.png"
+        style="float:right; max-width:120px; margin:-20px 0 1rem 1rem; opacity:0.85;transform: scaleX(-1);"
+        alt="Anxious girl illustration">
       <p>This graduation project explores how and if anxiety levels change during the different phases of the menstrual
         cycle in women who are not using hormonal birth control.
         Participants will fill in a short daily survey for two full cycles to report how anxious they felt each day.
@@ -247,15 +249,25 @@
     <br>
     <hr class="custom-line">
 
-
+    <!-- 
     <footer id="contact">
       <p>If you're interested in participating or have any questions, feel free to send me an email!</p>
       <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a>
         <br>
         LinkedIn: <a href="https://www.linkedin.com/in/nikki-s-rademaker/">nikki-s-rademaker</a>
-
       </p>
-    </footer>
+    </footer> -->
+
+<footer id="contact" style="position: relative; text-align: center; margin-top: 4rem;">
+  <img src="Girl.png" alt="Smiling girl illustration" style="float: left; max-width:120px; margin:-60px 0 1rem 1rem; opacity: 0.85; padding-left: 1rem;">
+  <div style="margin-left: 180px; text-align: left;">
+    <p>If you're interested in participating or have any questions, feel free to send me an email!</p>
+    <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a><br>
+      LinkedIn: <a href="https://www.linkedin.com/in/nikki-s-rademaker/">nikki-s-rademaker</a>
+    </p>
+  </div>
+</footer>
+
   </div>
 </body>
 
