--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="sections">
 
       <div class="section">
-        <h2>Participation criteria</h2>
+        <h2>Participation Criteria</h2>
         <ul>
           <li>Female.</li>
           <li>Age 18 or older.</li>
