--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <h2>Participation Criteria</h2>
         <ul>
           <li>Female.</li>
-          <li>Age 18 or older.</li>
+          <li>Age: 18 or older.</li>
           <li>Natural menstrual cycle.</li>
           <li>Have not used hormonal birth control in the past 2 months.</li>
           <li>Are not planning to use hormonal birth control in the next 3 months.</li>
