--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
       max-width: 100%;
       margin-top: 2rem;
     }
+
+    .register-deadline {
+      font-size: 0.75rem;
+      color: #b3003b;
+      margin-top: 2rem;
+      display: block;
+      text-align: center;
+    }
   </style>
 </head>
 
@@ -120,9 +128,10 @@
       <br>
       <br>
       <a href="#contact" class="button">Participate Now</a>
+      <span class="register-deadline">Register until June ....., 2025</span>
     </header>
 
-    <hr class="custom-line">
+    <hr class="custom-line" style="margin-top:0.4rem;">
     <div class="section">
       <h2>About Me</h2>
       <p>Hi, thank you so much for taking the time to learn more about my Master's thesis! My name is Nikki Rademaker.
@@ -258,15 +267,16 @@
       </p>
     </footer> -->
 
-<footer id="contact" style="position: relative; text-align: center; margin-top: 4rem;">
-  <img src="Girl.png" alt="Smiling girl illustration" style="float: left; max-width:120px; margin:-60px 0 1rem 1rem; opacity: 0.85; padding-left: 1rem;">
-  <div style="margin-left: 180px; text-align: left;">
-    <p>If you're interested in participating or have any questions, feel free to send me an email!</p>
-    <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a><br>
-      LinkedIn: <a href="https://www.linkedin.com/in/nikki-s-rademaker/">nikki-s-rademaker</a>
-    </p>
-  </div>
-</footer>
+    <footer id="contact" style="position: relative; text-align: center; margin-top: 4rem;">
+      <img src="Girl.png" alt="Smiling girl illustration"
+        style="float: left; max-width:120px; margin:-60px 0 1rem 1rem; opacity: 0.85; padding-left: 1rem;">
+      <div style="margin-left: 180px; text-align: left;">
+        <p>If you're interested in participating or have any questions, feel free to send me an email!</p>
+        <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a><br>
+          LinkedIn: <a href="https://www.linkedin.com/in/nikki-s-rademaker/">nikki-s-rademaker</a>
+        </p>
+      </div>
+    </footer>
 
   </div>
 </body>
