--- a/index.html
+++ b/index.html
@@ -156,10 +156,14 @@
         Participants will fill in a short daily survey for two full cycles to report how anxious they felt each day.
         The study also includes a simple task where participants read short stories and answer questions to see how well
         they understand social situations.
-        This is done to find out if changes in anxiety may also affect affective Theory of Mind abilities, which involve
+        This is done to find out if the menstrual cycle phase (and possible changes in anxiety) also have an effect on affective Theory of Mind abilities, which involve
         recognizing others' emotions and intentions.
         The overall main goal of this study is to better understand if and when anxiety tends to increase across the
         cycle, and how this might relate to hormonal changes.</p>
+
+      <p>Since this research involves personal data, the project required ethics approval from the Media Technology ethics board at Leiden University
+          to ensure that the study follows all ethical guidelines.
+      </p>
     </div>
 
 
@@ -186,7 +190,7 @@
           <li>Report menstruation dates and relevant symptoms.</li>
           <li>Take 4 short Theory of Mind tests (15-25 min each) in total. This will be done on days 7-10 and 21-24 of
             the menstrual cycle for two cycles.</li>
-          <li>Share if you have a relevant diagnoses or are taking medications affecting anxiety. You don't have to
+          <li>Share if you have a relevant diagnosis or are taking medication affecting anxiety. You don't have to
             mention which diagnosis or medication.</li>
         </ul>
       </div>
