--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
           you
           can complete them at a time that works for you within
           that window.</li>
+        <li>After filling in the daily survey for two full cycles, and after doing all the Theory of Mind tasks, you will receive one last email asking you to sign the debriefing form.</li>
       </ul>
     </div>
 
