--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <br>
       <br>
       <a href="#contact" class="button">Participate Now</a>
-      <span class="register-deadline">Register until June ....., 2025</span>
+      <span class="register-deadline">Register until July 7, 2025</span>
     </header>
 
     <hr class="custom-line" style="margin-top:0.2rem;">
@@ -229,7 +229,7 @@
       <h2>How to Sign Up and What to Expect?</h2>
       <ul>
         <li>Email me to let me know you would like to participate.</li>
-        <li>You will receive a link to the initial survey, which includes: <ul>
+        <li>On July 7, you will receive a link to the initial survey, which includes: <ul>
             <li>An information sheet about the study and contact details (mine and my supervisor’s).</li>
             <li>An informed consent form to confirm your agreement to participate.</li>
           </ul>
