--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
       <h2>How to Sign Up and What to Expect?</h2>
       <ul>
         <li>Email me to let me know you would like to participate.</li>
-        <li>On July 7, you will receive a link to the initial survey, which includes: <ul>
-            <li>An information sheet about the study and contact details (mine and my supervisor’s).</li>
+        <li>On July 7, you will receive a link to the initial survey through the email address you signed up with, which includes: <ul>
+            <li>An information sheet about the study and contact details (mine and my supervisor's).</li>
             <li>An informed consent form to confirm your agreement to participate.</li>
           </ul>
         </li>
@@ -249,6 +249,7 @@
           can complete them at a time that works for you within
           that window.</li>
         <li>After filling in the daily survey for two full cycles, and after doing all the Theory of Mind tasks, you will receive one last email asking you to sign the debriefing form.</li>
+        <li>All surveys will be sent to the email address you signed up with.</li>
       </ul>
     </div>
 
