--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       <img src="Girl.png" alt="Smiling girl illustration"
         style="float: left; max-width:120px; margin:-60px 0 1rem 1rem; opacity: 0.85; padding-left: 1rem;">
       <div style="margin-left: 180px; text-align: left;">
-        <p>If you're interested in participating or have any questions, feel free to send me an email!</p>
+        <p><strong>If you're interested in participating or have any questions, feel free to send me an email!</strong></p>
         <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a><br>
           LinkedIn: <a href="https://www.linkedin.com/in/nikki-s-rademaker/">nikki-s-rademaker</a>
         </p>
