--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
         <li>After filling in the daily survey for two full cycles, and after doing all the Theory of Mind tasks, you will receive one last email asking you to sign the debriefing form.</li>
         <li>All surveys will be sent to the email address you signed up with.</li>
       </ul>
+      <p><strong>Note:</strong> You don't need to start on the first day of your menstrual cycle. You can begin participating at any point in your cycle.</p>
+
     </div>
 
     <br>
