--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
       display: block;
       text-align: center;
     }
+
+    .button--outline { background: transparent; color: #b3003b; border: 1px solid #b3003b; }
+
   </style>
 </head>
 
@@ -266,15 +269,6 @@
     <br>
     <hr class="custom-line">
 
-    <!-- 
-    <footer id="contact">
-      <p>If you're interested in participating or have any questions, feel free to send me an email!</p>
-      <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a>
-        <br>
-        LinkedIn: <a href="https://www.linkedin.com/in/nikki-s-rademaker/">nikki-s-rademaker</a>
-      </p>
-    </footer> -->
-
     <footer id="contact" style="position: relative; text-align: center; margin-top: 4rem;">
       <img src="Girl.png" alt="Smiling girl illustration"
         style="float: left; max-width:120px; margin:-60px 0 1rem 1rem; opacity: 0.85; padding-left: 1rem;">
@@ -283,6 +277,12 @@
         <p>Email: <a href="mailto:n.s.rademaker@gmail.com">n.s.rademaker@gmail.com</a><br>
           LinkedIn: <a href="https://www.linkedin.com/in/nikki-s-rademaker/">nikki-s-rademaker</a>
         </p>
+
+        <p style="margin-top:1rem;">
+      <a href="BeyondMoodSwings_Flyer.pdf" target="_blank" rel="noopener">
+        View the study poster and flyer
+      </a>
+    </p>
       </div>
     </footer>
 
